# SPDX-FileCopyrightText: 2023-2025 erdnaxe
# SPDX-License-Identifier: CC0-1.0

[package]
name = "sossette"
authors = ["erdnaxe <erdnaxe@crans.org>"]
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap-verbosity-flag = "3.0"
command-group = { version = "5.0", features = ["with-tokio"] }
env_logger = "0.11"
log = "0.4"
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1.5", features = [
    "rt-multi-thread",
    "io-util",
    "signal",
    "net",
    "time",
    "process",
    "macros",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
